# student-services-mcp

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  examples.ipynb  main.py  mcp_notebook_example.ipynb  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml
cdk/: stack.py
src/: client.py  formatter.py  mcp_server.py
src/adapters/clients/: financial_aid.py  registrar.py  synthetic_data.py
src/adapters/resolvers/: financial_aid_resolvers.py  registrar_resolvers.py
src/config/: settings.py
src/core/: mcp_router.py  rag_formatter.py  retrieval_engine.py
src/entities/: chat.py  health.py  response.py
src/middleware/: agent_validator.py  auth.py
src/retrievers/: available_aid_api.py  base.py  dynamodb.py  faiss.py  s3.py  student_record_api.py
src/systems/: claims.py  eligibility.py  records.py  synthetic_data.py
src/templates/: phi4_prompt.py
src/utils/: generate_test_jwt.py  utils.py
src/utils/templates/: default_prompt.py
tests/unit/: test_formatter.py  test_mcp_client.py  test_middleware.py
tests/unit/adapters/resolvers/: test_financial_aid_resolver.py  test_registar_resolver.py
tests/unit/systems/: test_claims_system.py  test_records_system.py  test_systems.py
