[project]
name = "finaid-mcp"
version = "0.1.0"
description = "Financial Aid Model Context Protocol Server Example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "coverage>=7.8.0",
    "mcp[cli]>=1.3.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "transformers>=4.51.3",
]

[project.scripts]
start = "main:run"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
